--- a/src/app/modules/dialog/components/job-progress/job-progress-dialog.component.scss
+++ b/src/app/modules/dialog/components/job-progress/job-progress-dialog.component.scss
@@ -26,7 +26,7 @@
   z-index: 1;
 }
 
-mat-dialog-content.job-dialog {
+.job-dialog {
   max-height: 350px;
   max-width: 100%;
   width: 100%;
